--- a/FXML/GameScene.fxml
+++ b/FXML/GameScene.fxml
@@ -34,9 +34,9 @@
             <Insets />
           </VBox.margin>
         </HBox>
-        <AnchorPane id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0">
+        <AnchorPane fx:id="anchorPane" id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0">
           <children>
-            <Canvas blendMode="DARKEN" height="600.0" rotate="0.0" scaleX="1.0" scaleY="1.0" width="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
+            <Canvas fx:id="gameCanvas" height="600.0" rotate="0.0" scaleX="1.0" scaleY="1.0" width="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
           </children>
         </AnchorPane>
       </children>
