--- a/FXML/HumanGameScene.fxml
+++ b/FXML/HumanGameScene.fxml
@@ -10,18 +10,18 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.GameStateController">
+<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.HumanGameStateController">
   <children>
     <VBox id="bordered-vbox" alignment="CENTER" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" padding="$x1" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
       <children>
         <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0" spacing="100.0">
           <children>
-            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Exit">
+            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Pause">
               <stylesheets>
                 <URL value="@../CSS/main.css" />
               </stylesheets>
             </Button>
-            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Pause">
+            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Exit">
               <stylesheets>
                 <URL value="@../CSS/main.css" />
               </stylesheets>
@@ -36,7 +36,10 @@
         </HBox>
         <AnchorPane fx:id="anchorPane" id="AnchorPane" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0">
           <children>
-            <Canvas fx:id="gameCanvas" height="600.0" rotate="0.0" scaleX="1.0" scaleY="1.0" width="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
+            <Canvas fx:id="backgroundCanvas" rotate="0.0" scaleX="1.0" scaleY="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
+          </children>
+          <children>
+            <Canvas fx:id="gameCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
           </children>
         </AnchorPane>
       </children>
