--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,9 +1,9 @@
-.box
+#box
 {
-    -fx-background-color: #ff0000;
+    -fx-background-color: #41080c;
 }
 
-.label
+#label
 {
     -fx-text-fill: greenyellow;
     -fx-font-weight: bold;
@@ -12,28 +12,27 @@
 
 #big-red-button
 {
-    -fx-background-color:
-    linear-gradient(#ff5400, #be1d00);
-    -fx-background-radius: 30;
-    -fx-background-insets: 0;
+    -fx-background-image: url(/assets/css/button1.png);
+    -fx-background-color: transparent;
     -fx-text-fill: white;
     -fx-padding: 15 30 15 30;
-    -fx-font-family: "Helvetica";
-    -fx-font-size: 18px;
+    -fx-font-family: "Arial";
+    -fx-font-size: 22px;
+
 }
 
 #big-red-button:hover
 {
-    -fx-background-color: #ecebe9, rgba(0,0,0,0.05), linear-gradient(#dcca8a, #c7a740),
-    linear-gradient(#f9f2d6 0%, #f4e5bc 20%, #e6c75d 80%, #e2c045 100%), linear-gradient(#f6ebbe, #e6c34d);
-    -fx-background-insets: 0,9 9 8 9,9,10,11;
-    -fx-background-radius: 50;
-    -fx-text-fill: #311c09;
-    -fx-effect: innershadow( three-pass-box , rgba(0,0,0,0.1) , 2, 0.0 , 0 , 1);
+    -fx-background-image:  url(/assets/css/button_hover1.png);
+    -fx-background-color: transparent;
+    -fx-text-fill: #6b6b6b;
 }
 
 #bordered-vbox
 {
-    -fx-border-color: black;
-    -fx-border-width: 2px;
+    -fx-border-color: #000000;
+    -fx-border-width: 10px;
+    -fx-background-color: #2b411d;
+    -fx-background-image: url(/assets/css/background_image.png);
 }
+
