--- a/FXML/HumanGameScene.fxml
+++ b/FXML/HumanGameScene.fxml
@@ -11,57 +11,50 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.HumanGameStateController">
+<VBox id="background" fx:id="root" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" padding="$x1" prefHeight="768.0" prefWidth="1024.0" spacing="50.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.HumanGameStateController">
   <children>
-    <VBox id="bordered-vbox" alignment="CENTER" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" padding="$x1" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0" GridPane.columnIndex="0" GridPane.rowIndex="0">
+    <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0" spacing="100.0">
       <children>
-        <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0" spacing="100.0">
-          <children>
-            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Pause">
-              <stylesheets>
-                <URL value="@../CSS/main.css" />
-              </stylesheets>
-            </Button>
-            <Button id="big-red-button" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Exit">
-              <stylesheets>
-                <URL value="@../CSS/main.css" />
-              </stylesheets>
-            </Button>
-          </children>
-          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" fx:id="x1" />
-          </padding>
-          <VBox.margin>
-            <Insets />
-          </VBox.margin>
-        </HBox>
-        <AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="1024.0">
-          <children>
-            <Canvas fx:id="backgroundCanvas" rotate="0.0" scaleX="1.0" scaleY="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
-            <Canvas fx:id="gameCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
-            <Canvas id="" fx:id="playerOneHPCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Canvas id="" fx:id="playerTwoHPCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Label id="army-label" fx:id="playerOneName" alignment="CENTER" layoutX="0.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="90.0" text="Label" textAlignment="CENTER" textFill="RED" wrapText="true">
-              <font>
-                <Font name="Arial Bold" size="18.0" fx:id="x2" />
-              </font>
-              <stylesheets>
-                <URL value="@../CSS/main.css" />
-              </stylesheets>
-            </Label>
-            <Label id="army-label" fx:id="playerTwoName" alignment="CENTER" font="$x2" layoutX="916.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="90.0" text="Label" textAlignment="CENTER" textFill="RED" wrapText="true" />
-          </children>
-        </AnchorPane>
+        <Button id="big-red-button" fx:id="pauseGameButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Pause">
+          <stylesheets>
+            <URL value="@../CSS/main.css" />
+          </stylesheets>
+        </Button>
+        <Button id="big-red-button" fx:id="exitGameButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="250.0" text="Exit">
+          <stylesheets>
+            <URL value="@../CSS/main.css" />
+          </stylesheets>
+        </Button>
       </children>
-      <stylesheets>
-        <URL value="@../CSS/main.css" />
-      </stylesheets>
-    </VBox>
+      <padding>
+        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" fx:id="x1" />
+      </padding>
+      <VBox.margin>
+        <Insets />
+      </VBox.margin>
+    </HBox>
+    <AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="1024.0">
+      <children>
+        <Canvas fx:id="backgroundCanvas" rotate="0.0" scaleX="1.0" scaleY="1.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
+        <Canvas fx:id="gameCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="105.0" AnchorPane.rightAnchor="-105.0" AnchorPane.topAnchor="0.0" />
+        <Canvas id="" fx:id="playerOneHPCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <Canvas id="" fx:id="playerTwoHPCanvas" rotate="0.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+        <Label id="army-label" fx:id="playerOneName" alignment="CENTER" layoutX="0.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="90.0" text="Label" textAlignment="CENTER" wrapText="true">
+          <font>
+            <Font name="Arial Bold" size="18.0" fx:id="x2" />
+          </font>
+          <stylesheets>
+            <URL value="@../CSS/main.css" />
+          </stylesheets>
+          <textFill>
+            <Color blue="0.000" green="0.000" red="0.600" fx:id="x3" />
+          </textFill>
+        </Label>
+        <Label id="army-label" fx:id="playerTwoName" alignment="CENTER" font="$x2" layoutX="916.0" layoutY="75.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="60.0" prefWidth="90.0" text="Label" textAlignment="CENTER" textFill="$x3" wrapText="true" />
+      </children>
+    </AnchorPane>
   </children>
-  <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-  </columnConstraints>
-  <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-  </rowConstraints>
-</GridPane>
+  <stylesheets>
+    <URL value="@../CSS/main.css" />
+  </stylesheets>
+</VBox>
