--- a/FXML/AIGameScene.fxml
+++ b/FXML/AIGameScene.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox id="background" fx:id="root" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" padding="$x1" prefHeight="768.0" prefWidth="1024.0" spacing="50.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.HumanGameStateController">
+<VBox id="background" fx:id="root" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" padding="$x1" prefHeight="768.0" prefWidth="1024.0" spacing="50.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="tanks.AIGameStateController">
   <children>
     <HBox alignment="CENTER" prefHeight="60.0" prefWidth="800.0" spacing="100.0">
       <children>
